Bug 216417 about: page has major errors r+sr=bz fix this by mapping all .xhtm and .xhtml files to application/xhtml+xml, not overridable by user or os